--- a/index.html
+++ b/index.html
@@ -10,8 +10,18 @@
 <body class="bg-gray-200 flex flex-col items-center justify-center h-screen gap-5">
     <h1 class="text-2xl">Listas Produtos</h1>
     <input  
+        id="codigo"
+        type="text" placeholder="código do produto" 
+        class="border p-2 rounded"
+    >
+    <input  
         id="produto"
-        type="text" 
+        type="text" placeholder="nome do produto"
+        class="border p-2 rounded"
+    >
+    <input  
+        id="quantidade"
+        type="text" placeholder="quantidade do produto"
         class="border p-2 rounded"
     >
     <button 
@@ -21,7 +31,7 @@
         Adicionar
     </button>
     <div
-        class="flex flex-col bg-amber-600"
+        class="flex flex-row gap-4"
         id="lista">
     </div> 
 </body>
