--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         Adicionar
     </button>
     <div
-        class="flex flex-row gap-4"
+        class="flex flex-col gap-4"
         id="lista">
     </div> 
 </body>
