feat: adcionar caixa de texto de valor do produto

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <script src="main.js"></script>
-    <title>Produtos de instrumentos</title>
+    <title>Produtos</title>
 </head>
 <body class="bg-gray-200 flex flex-col items-center justify-center h-screen gap-5">
     <h1 class="text-2xl">Listas Produtos</h1>
@@ -22,6 +22,11 @@
     <input  
         id="quantidade"
         type="text" placeholder="quantidade do produto"
+        class="border p-2 rounded"
+    >
+    <input  
+        id="valor"
+        type="text" placeholder="valor do produto"
         class="border p-2 rounded"
     >
     <button 
